--- a/.github/workflows/5.4-openwrt.yml
+++ b/.github/workflows/5.4-openwrt.yml
@@ -1,31 +1,17 @@
-#
-# Copyright (c) 2019-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
-# https://github.com/P3TERX/Actions-OpenWrt
-# Description: Build OpenWrt using GitHub Actions
-#
-
-name: 5.4-openwrt
+name: 21.02
 
 on:
-  repository_dispatch:
   workflow_dispatch:
     inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+      manual:
+        description: '手动触发一次编译'
 
 env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: 21.02
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  CONFIG_FILE: diff.config
+  DIY_P1_SH: diy/21.02.sh
+  DIY_P2_SH: diy/diy2.sh
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
 
@@ -37,7 +23,7 @@ jobs:
     - name: 准备结束
       uses: actions/checkout@main
 
-    - name: 部署编译环境
+    - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -49,70 +35,72 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-    - name: 下载源码
+        
+    - name: 拉取openwrt源码
       working-directory: /workdir
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-    - name: 加载源和自定义设置1
+        
+    - name: DIY1(一般用于安装依赖和插件)
       run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
-    - name: 更新和安装订阅源
+        
+    - name: 安装并更新feeds
+      working-directory: ./openwrt
       run: |
-        cd openwrt 
-        ./scripts/feeds clean
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-    - name: 加载files和自定义设置2
-      run: |
+        ./scripts/feeds install -a
+        
+    - name: 加载files和.config
+      run: |        
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        
+    - name: DIY2（一般用于ip和样式等）
+      run: |
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-    - name: 下载package
-      id: package
+        
+    - name: 下载依赖
+      working-directory: ./openwrt
       run: |
-        cd openwrt
         make defconfig
-        make download -j8
+        make download -j$(nproc)
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
+        
     - name: 编译固件
-      id: compile
+      working-directory: ./openwrt
       run: |
-        cd openwrt
-        echo -e "$(nproc) thread compile"
+        echo -e "$(nproc) thread build."
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-    - name: 检查空间使用情况
-      if: (!cancelled())
-      run: df -hT
-
+        
     - name: 整理文件
       id: organize
-      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
+        # 整理固件包时候,删除您不想要的固件或者文件,让它不需要上传到Actions空间
         rm -rf packages
+        rm -rf feeds.buildinfo
+        rm -rf version.buildinfo
+        rm -rf *kernel.bin
+        rm -rf profiles.json
+        rm -rf *rootfs.img
+        rm -rf *.manifest
+        rm -rf sha256sums
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        
     - name: 上传固件
       uses: actions/upload-artifact@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
-
-    - name: 删除工作流运行
-      uses: GitRML/delete-workflow-runs@main
-      with:
-        retain_days: 1
-        keep_minimum_runs: 3
